--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "graphql-node-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Aplicação Blog utilizando GraphQL",
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development node_modules/.bin/nodemon --delay 5 dist/index",
+    "docker": "NODE_ENV=docker node_modules/.bin/nodemon dist/index",
     "gulp": "node_modules/.bin/gulp"
   },
   "keywords": [],
-  "author": "",
+  "author": "Tiago Mariani Palte",
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "2.4.1",
@@ -20,7 +21,7 @@
     "gulp": "3.9.1",
     "gulp-clean": "0.3.2",
     "gulp-typescript": "3.2.2",
-    "nodemon": "1.12.0",
+    "nodemon": "^1.12.0",
     "typescript": "2.5.3"
   },
   "dependencies": {
