--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development node_modules/.bin/nodemon --delay 5 dist/index",
-    "docker": "NODE_ENV=docker node_modules/.bin/nodemon dist/index",
     "gulp": "node_modules/.bin/gulp"
   },
   "keywords": [],
   "author": "Tiago Mariani Palte",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/bcryptjs": "2.4.1",
     "@types/express": "4.0.37",
@@ -33,6 +32,7 @@
     "graphql-tools": "2.3.0",
     "lodash": "4.17.4",
     "mysql2": "1.4.2",
-    "sequelize": "4.13.10"
+    "sequelize": "4.13.10",
+    "sequelize-cli": "^4.0.0"
   }
 }
