--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "NODE_ENV=development JWT_SECRET=iron_man node_modules/.bin/nodemon --delay 5 dist/index",
     "gulp": "node_modules/.bin/gulp",
-    "test": "NODE_ENV=test JWT_SECRET=jwt_test mocha"
+    "test": "NODE_ENV=test JWT_SECRET=jwt_test mocha",
+    "coverage": "nyc --extension .ts --include 'src/**/*.ts' --reporter html npm test"
   },
   "keywords": [],
   "author": "Tiago Mariani Palte",
@@ -30,6 +31,7 @@
     "gulp-typescript": "3.2.2",
     "mocha": "4.0.1",
     "nodemon": "^1.12.0",
+    "nyc": "11.3.0",
     "ts-node": "3.3.0",
     "typescript": "2.5.3"
   },
